// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiPopover children is rendered 1`] = `
<div
  class="kuiPopover"
>
  <button />
</div>
`;

exports[`KuiPopover is rendered 1`] = `
<div
  aria-label="aria-label"
  class="kuiPopover testClass1 testClass2"
  data-test-subj="test subject string"
>
  <button />
</div>
`;

exports[`KuiPopover props anchorPosition defaults to center 1`] = `
<div
  class="kuiPopover"
>
  <button />
</div>
`;

exports[`KuiPopover props anchorPosition left is rendered 1`] = `
<div
  class="kuiPopover kuiPopover--anchorLeft"
>
  <button />
</div>
`;

exports[`KuiPopover props anchorPosition right is rendered 1`] = `
<div
  class="kuiPopover kuiPopover--anchorRight"
>
  <button />
</div>
`;

exports[`KuiPopover props isOpen defaults to false 1`] = `
<div
  class="kuiPopover"
>
  <button />
</div>
`;

exports[`KuiPopover props isOpen renders true 1`] = `
<div
  class="kuiPopover"
>
  <button />
  <div>
    <div
      class="kuiPanelSimple kuiPanelSimple--paddingMedium kuiPanelSimple--shadow kuiPopover__panel"
    />
  </div>
</div>
`;

exports[`KuiPopover props ownFocus defaults to false 1`] = `
<div
  class="kuiPopover"
>
  <button />
  <div>
    <div
      class="kuiPanelSimple kuiPanelSimple--paddingMedium kuiPanelSimple--shadow kuiPopover__panel"
    />
  </div>
</div>
`;

exports[`KuiPopover props ownFocus renders true 1`] = `
<div
  class="kuiPopover"
>
  <button />
  <div>
    <div
      class="kuiPanelSimple kuiPanelSimple--paddingMedium kuiPanelSimple--shadow kuiPopover__panel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`KuiPopover props panelClassName is rendered 1`] = `
<div
  class="kuiPopover"
>
  <button />
  <div>
    <div
      class="kuiPanelSimple kuiPanelSimple--paddingMedium kuiPanelSimple--shadow kuiPopover__panel test"
    />
  </div>
</div>
`;

exports[`KuiPopover props panelPaddingSize is rendered 1`] = `
<div
  class="kuiPopover"
>
  <button />
  <div>
    <div
      class="kuiPanelSimple kuiPanelSimple--paddingSmall kuiPanelSimple--shadow kuiPopover__panel"
    />
  </div>
</div>
`;

exports[`KuiPopover props withTitle is rendered 1`] = `
<div
  class="kuiPopover kuiPopover--withTitle"
>
  <button />
</div>
`;
